# bag_match

./: .gitignore  README.md  pyproject.toml
src/bag_match/: __init__.py  similarity.py
src/bag_match/config/: __init__.py  settings.py
src/bag_match/core/: __init__.py  analysis.py  matcher.py  similarity.py  simulation_utils.py  utils.py
src/bag_match/data/: __init__.py  simulator.py
src/bag_match/examples/: __init__.py  complex_usage.py  simple_usage.py  simulation.py
src/bag_match/simulation/: __init__.py  config.py  runner.py  utils.py
