[project]
name = "bag-match"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Cochran",email = "rodrigocochran@berkeley.edu"}
]
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
