[project]
name = "bag-match"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Cochran",email = "rodrigocochran@berkeley.edu"}
]
package-mode = false
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "hf-xet (>=1.0.3,<2.0.0)",
    "random-word (>=1.0.13,<2.0.0)",
    "ray (>=2.44.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
